--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="./style.css" />
-  <script type="module" src="./index.js" defer></script>
+  <link rel="stylesheet" href="./public/style.css" />
+  <script type="module" src="./public/index.js" defer></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script type="module" defer>
