--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             tbody.innerHTML += row;
           });
 
-          document.querySelector("#sum").textContent = `${table.rows.lengt - 1}`;
+          document.querySelector("#sum").textContent = `${table.rows.length - 1}`;
         })
         .catch(function (error) {
           console.log(error);
